Fix horizontal menu spacing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -60,9 +60,5 @@ button {
 }
 
 .horizontal-menu {
-  margin-bottom: 20px;
-}
-
-.menu-item-wrapper {
-  margin: 0px 10px;
+  margin-bottom: 30px;
 }
